--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             
             th, td {
                 padding: 10px;
-                border: 1px solid #ddd;
+                border: 1px solid #dd1818;
             }
             
             th {
@@ -72,4 +72,4 @@
         <p>a<sup>2</sup>+b<sup>2</sup>+2ab=(a+b)<sup>2</sup></p>
         <a href="https://google.com"><img src="/https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRems0IEWgty3fbjX6yemkluFEdy7nZO7sXRFDpWh8QmELUpkD8J8Dz3HU&s  height="100px></a>
        </body>   
-       </html>   git push -u origin main                                                                                                                                          
+       </html>                                                                                                                                           
